--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       .handle {
         position: absolute;
-        top: 0px;
+        top: 0;
         left: 0;
         width: 56px;
         height: 56px;
@@ -29,6 +29,23 @@
         box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                     0 3px 14px 2px rgba(0, 0, 0, 0.12),
                     0 5px 5px -3px rgba(0, 0, 0, 0.4);
+      }
+
+      .path-container {
+        position: relative;
+        height: 100%;
+        overflow: hidden;
+      }
+
+      .path {
+        position: absolute;
+        top: 27px;
+        left: 0;
+        display: block;
+        width: 1992px;
+        height: 2px;
+        background: url("path.svg");
+        background-size: contain;
       }
 
       .end-well {
@@ -122,13 +139,13 @@
           transform: scale(1);
         }
         25% {
-          transform: scale(1.1);
+          transform: scale(1.2);
           box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
                       0 9px 46px 8px rgba(0, 0, 0, 0.12),
                       0 11px 15px -7px rgba(0, 0, 0, 0.4);
         }
         50% {
-          transform: scale(1.1);
+          transform: scale(1.2);
           box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
                       0 9px 46px 8px rgba(0, 0, 0, 0.12),
                       0 11px 15px -7px rgba(0, 0, 0, 0.4);
@@ -180,6 +197,7 @@
 
     <div class="container">
       <div id="slider">
+        <div class="path-container"><span class="path"></span></div>
         <div class="end-well">
           <span class="x"></span>
         </div>
