--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
         margin-top: 70vh;
       }
 
-      .handle {
+      .handle-container {
         position: absolute;
         top: 0;
         left: 0;
         width: 56px;
         height: 56px;
         border-radius: 50%;
-        background-color: red;
-        box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                    0 3px 14px 2px rgba(0, 0, 0, 0.12),
-                    0 5px 5px -3px rgba(0, 0, 0, 0.4);
+        z-index: 999;
+      }
+
+      .handle {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-image: linear-gradient(to top, #FC2777 0%, #FF60BB 100%);
+        box-shadow: 0 8px 10px 1px rgba(127, 21, 49, 0.14),
+                    0 3px 14px 2px rgba(127, 21, 49, 0.12),
+                    0 5px 5px -3px rgba(127, 21, 49, 0.4);
       }
 
       .path-container {
@@ -77,7 +84,7 @@
         display: block;
         width: 24px;
         height: 24px;
-        background: url("clock.svg");
+        background: url("clock2.svg");
         background-size: 24px 24px;
       }
 
@@ -88,7 +95,7 @@
         display: block;
         width: 24px;
         height: 24px;
-        background: url("ringer.svg");
+        background: url("ringer2.svg");
         background-size: 24px 24px;
       }
 
@@ -100,6 +107,14 @@
 
       .shake {
         animation: shake 2.7s infinite;
+      }
+
+      .scale {
+        animation: scale 2.7s infinite;
+      }
+
+      .raise {
+        animation: raise 2.7s infinite;
       }
 
       @keyframes shake {
@@ -130,31 +145,47 @@
         50% { transform: rotate(0deg); }
       }
 
-      .scale {
-        animation: scale 2.7s infinite;
-      }
-
       @keyframes scale {
         0% {
           transform: scale(1);
         }
         25% {
           transform: scale(1.2);
-          box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+          /*box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
                       0 9px 46px 8px rgba(0, 0, 0, 0.12),
-                      0 11px 15px -7px rgba(0, 0, 0, 0.4);
+                      0 11px 15px -7px rgba(0, 0, 0, 0.4);*/
         }
         50% {
           transform: scale(1.2);
-          box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+          /*box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
                       0 9px 46px 8px rgba(0, 0, 0, 0.12),
-                      0 11px 15px -7px rgba(0, 0, 0, 0.4);
+                      0 11px 15px -7px rgba(0, 0, 0, 0.4);*/
         }
         60% {
           transform: scale(1);
-          box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+          /*box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                       0 3px 14px 2px rgba(0, 0, 0, 0.12),
-                      0 5px 5px -3px rgba(0, 0, 0, 0.4);
+                      0 5px 5px -3px rgba(0, 0, 0, 0.4);*/
+        }
+      }
+
+      @keyframes raise {
+        0% {
+        }
+        25% {
+          box-shadow: 0 24px 38px 3px rgba(127, 21, 49, 0.14),
+                      0 9px 46px 8px rgba(127, 21, 49, 0.12),
+                      0 11px 15px -7px rgba(127, 21, 49, 0.4);
+        }
+        50% {
+          box-shadow: 0 24px 38px 3px rgba(127, 21, 49, 0.14),
+                      0 9px 46px 8px rgba(127, 21, 49, 0.12),
+                      0 11px 15px -7px rgba(127, 21, 49, 0.4);
+        }
+        60% {
+          box-shadow: 0 8px 10px 1px rgba(127, 21, 49, 0.14),
+                      0 3px 14px 2px rgba(127, 21, 49, 0.12),
+                      0 5px 5px -3px rgba(127, 21, 49, 0.4);
         }
       }
     </style>
@@ -162,21 +193,29 @@
     <script>
       window.addEventListener('load', function(e) {
         var handle = document.querySelector('.handle');
+        var handleContainer = document.querySelector('.handle-container');
         var ringer = document.querySelector('.ringer-icon');
+        var path = document.querySelector('.path');
+        var pathContainer = document.querySelector('.path-container');
+
         var handlePosition;
+
 
         var slider = new Dragdealer('slider', {
           steps: 2,
-          speed: .2,
+          speed: .3,
+          loose: true,
           animationCallback: function(x, y) {
             handlePosition = x;
+            path.style.left = x * (pathContainer.offsetWidth - handle.offsetWidth) + 'px';
             if (x < 1) {
               this.setValue(0, 0);
             }
           },
           dragStartCallback: function(x, y) {
-            handle.classList.remove('scale');
+            handleContainer.classList.remove('scale');
             handle.classList.add('press');
+            handle.classList.remove('raise');
           },
           dragStopCallback: function(x, y) {
             if (handlePosition < 1) {
@@ -184,7 +223,8 @@
               ringer.classList.remove('shake');
               void ringer.offsetWidth;
               ringer.classList.add('shake');
-              handle.classList.add('scale');
+              handle.classList.add('raise');
+              handleContainer.classList.add('scale');
             } else if (handlePosition === 1) {
               ringer.classList.remove('shake');
             }
@@ -201,9 +241,11 @@
         <div class="end-well">
           <span class="x"></span>
         </div>
-        <div class="handle scale">
-          <span class="clock-icon"></span>
-          <span class="ringer-icon shake"></span>
+        <div class="handle-container scale">
+          <div class="handle raise">
+            <span class="clock-icon"></span>
+            <span class="ringer-icon shake"></span>
+          </div>
         </div>
       </div>
     </div>
